# Trac_Progess

./: PRD.md  README.md  SRS.md  firebase-applet-config.json  index.html  metadata.json  package-lock.json  package.json  server.ts  tsconfig.json
docs/: acos-2035-architecture.md  brutal-codebase-audit.md  buildots-feature-parity-audit.md  buildots-reverse-engineering.md  enterprise-ai-engine-design.md  enterprise-backend-architecture-design.md  enterprise-missing-features-finder.md  image_to_bim_registration_engine_architecture.md  ultimate-product-roadmap.md
enterprise_cv_platform/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
enterprise_cv_platform/.pytest_cache/v/cache/: nodeids
enterprise_cv_platform/app/: config.py  logger.py  main.py
enterprise_cv_platform/app/adapters/api/: router.py  websocket.py
enterprise_cv_platform/app/core/domain/: entities.py  interfaces.py
enterprise_cv_platform/app/core/use_cases/: align_point_cloud.py  schedule_delay_engine.py
enterprise_cv_platform/app/infrastructure/geometry/: icp_aligner.py
enterprise_cv_platform/app/infrastructure/ml/: yolo_segmenter.py
enterprise_cv_platform/app/infrastructure/slam/: __init__.py  feature_tracker.py  ifc_parser.py  pipeline.py  registration.py  slam_engine.py  video_processor.py
enterprise_cv_platform/tests/: test_schedule_delay_engine.py  test_slam_pipeline.py
src/: AIAnomalyCenter.tsx  App.tsx  AuditTrailViewer.tsx  BIMViewer.tsx  BimEngineDesign.tsx  DashboardMetrics.tsx  DelayPredictionDesign.tsx  EnterpriseDashboard.tsx  NestJsBackendDesign.tsx  NotificationCenter.tsx  PRDViewer.tsx  ProgressEngineDesign.tsx  ReportingCenter.tsx  RestApiDocumentation.tsx  RoadmapViewer.tsx  TechArchitecture.tsx  data.ts  reportsData.ts  store.ts  types.ts
(+258 files in other folders)
