[tool.poetry]
name = "enterprise-cv-platform"
version = "1.0.0"
description = "Enterprise Clean Architecture Computer Vision & Photogrammetry BIM Sync Platform"
authors = ["Lead AI Engineer <lead-ai@buildtrace.in>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (imports layout)
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear (common traps)
    "UP",  # pyupgrade (modern syntax)
]
ignore = [
    "E501", # line length handled by black/ruff formatter
    "B008", # function call in argument default (FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true

[tool.black]
line-length = 100
target-version = ['py312']
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "ultralytics.*",
    "open3d.*",
    "cv2.*",
    "scipy.*",
    "segment_anything.*",
    "boto3.*",
    "asyncpg.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --tb=short"
testpaths = [
    "tests",
]
python_files = "test_*.py"
asyncio_mode = "auto"
